--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Abra a Consola do Navegador (F12)</h1>
     <p>O resultado do nosso código JavaScript será exibido no separador "Console".</p>
     
-    <script src="app.js"></script>
+   <!-- <script src="app.js"></script> -->
+    <script src="index.js"></script>
 </body>
 </html>
