--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>O resultado do nosso código JavaScript será exibido no separador "Console".</p>
     
    <!-- <script src="app.js"></script> -->
-    <script src="index.js"></script>
+    <script src="analise.js"></script>
 </body>
 </html>
